# FlatGram

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sticker_jni.cpp
app/src/main/keepRules/: rules.keep
app/src/main/kotlin/org/flatgram/messenger/: MainActivity.kt
app/src/main/kotlin/org/flatgram/messenger/adapter/: AnimatedEmojiPlayerView.kt  AvatarBinder.kt  ChatListAdapter.kt  MediaPreviewBinder.kt  MessageAdapter.kt
app/src/main/kotlin/org/flatgram/messenger/application/: MainApplication.kt
app/src/main/kotlin/org/flatgram/messenger/db/: FlatGramDatabase.kt
app/src/main/kotlin/org/flatgram/messenger/db/dao/: ChatDao.kt  MessageDao.kt
app/src/main/kotlin/org/flatgram/messenger/db/entity/: ChatEntity.kt  MessageEntity.kt
app/src/main/kotlin/org/flatgram/messenger/sticker/: NativeStickerCore.kt  StickerAnimScheduler.kt  StickerController.kt  StickerRegistry.kt
app/src/main/kotlin/org/flatgram/messenger/td/: ChatListItem.kt  ChatListSnapshotStore.kt  MessageCache.kt  MessageContentFormatter.kt  MessageContentMapper.kt  MessageContentSnapshot.kt  MessageContentUi.kt  MessageListItem.kt  RoomChatListStore.kt  RoomMessageStore.kt  TdAuthClient.kt  TdChatRepository.kt  TdEntityCache.kt  TdMessageRepository.kt
app/src/main/kotlin/org/flatgram/messenger/ui/chat/: ChatActivity.kt
app/src/main/kotlin/org/flatgram/messenger/ui/chats/: ChatListActivity.kt  ChatListAuthRouter.kt
app/src/main/kotlin/org/flatgram/messenger/ui/login/: LoginActivity.kt
app/src/main/res/drawable/: bg_message_in.xml  bg_message_in_join_both.xml  bg_message_in_join_next.xml  bg_message_in_join_prev.xml  bg_message_out.xml  bg_message_out_join_both.xml  bg_message_out_join_next.xml  bg_message_out_join_prev.xml  bg_unread_count.xml
app/src/main/res/layout/: activity_chat.xml  activity_chat_list.xml  activity_login.xml  item_chat.xml  item_message_animated_emoji.xml  item_message_in.xml  item_message_out.xml  item_message_text.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
